Bug 72394 - Program freezes when changing a Path in Options
Summary: Program freezes when changing a Path in Options
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta2
Hardware: x86-64 (AMD64) All
: highest critical
Assignee: Stephan Bergmann
URL:
Whiteboard: target:4.3.0 target:4.2.0.1
Keywords:
: 72406 (view as bug list)
Depends on:
Blocks: Options-Dialog-Paths
  Show dependency treegraph
 
Reported: 2013-12-06 13:15 UTC by Italo Vignoli
Modified: 2017-07-24 15:32 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Italo Vignoli 2013-12-06 13:15:14 UTC
LibreOffice 4.2 Beta 2 for MacOS X 10.9 freezes when saving any change in the Preferences (Options) windows. The problem happens with 32 and 64 bit versions, and you have to kill the program using Force Quit. Tested on two different MacBook, with different processors.
To reproduce, launch LibreOffice, open a document (even a new one), open the Preference window, change one of the options in one of the panels (I tried with several combinations), hit Save to apply the change. The cursor does not change shape for a few seconds, then changes to the multi-colour wheel and stays as such forever (until you force quit the program).
Comment 1 Cor Nouws 2013-12-07 11:28:10 UTC
Hi Italo,

thanks for reporting the problem. 
No problem on Ubuntu.
Might be Mac-specific?

Cheers,
Cor
Comment 2 Jorendc 2013-12-07 11:41:09 UTC
Mmh, can't reproduce this one. Tested using Mac OSX 10.9 with a mid 2010 Macbook Pro 13".

@Foss: any chance to reproduce this one :)?
Comment 3 Italo Vignoli 2013-12-07 17:27:16 UTC
After a clean install of LO 4.2 Beta 2, I managed to find the culprit, and was able to reproduce the problem on Windows too. The freeze happens when you change a path in the Path section of the Options (Preferences in MacOS). I tried to change the Template path, and when I pushed OK the program froze. On Windows, I waited several hours, without any result. Tested on MacOS 10.9 and Windows 7, same behaviour on both OS.
Comment 4 retired 2013-12-07 20:58:19 UTC
Confirmed on OS X 10.9 LO Version: 4.3.0.0.alpha0+
Build ID: 5e01904de993caa3d497a8f6c82a846336e70eef
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2013-12-06_02:05:01
Comment 5 Cor Nouws 2013-12-07 23:23:05 UTC
*** Bug 72406 has been marked as a duplicate of this bug. ***
Comment 6 Cor Nouws 2013-12-07 23:23:30 UTC
pls see https://bugs.freedesktop.org/show_bug.cgi?id=72406#c4 too
Comment 7 Commit Notification 2013-12-09 08:56:45 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=56211a166ab25d80de84c2cccce22be15a9be051

fdo#72394 Don't endlessly expand $(share_subdir_name) into itself



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-12-09 09:05:34 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f04cb4f73121710503884e24aeed27178601888a&h=libreoffice-4-2

fdo#72394 Don't endlessly expand $(share_subdir_name) into itself


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.