framework/source/services/substitutepathvars.cxx
@@ -999,7 +999,8 @@ throw ( RuntimeException )
                 bool bMatch = true;
                 if ( pIterFixed->eVariable == PREDEFVAR_LANG ||
                      pIterFixed->eVariable == PREDEFVAR_LANGID ||
-                     pIterFixed->eVariable == PREDEFVAR_VLANG )
+                     pIterFixed->eVariable == PREDEFVAR_VLANG ||
+                     pIterFixed->eVariable == PREDEFVAR_SHARE_SUBDIR_NAME )
                 {
                     // Special path variables as they can occur in the middle of a path. Only match if they
                     // describe a whole directory and not only a substring of a directory!
